--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ img:hover {
 
 .container {
   display: flex;
-  justify-content: flex-start;
+  justify-content: space-around;
   align-items: center;
   margin: 0px 50px;
 }
